# cult_of_azathoth

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  storyboard.md
dev/: SCENARIO_GUIDE.md
dev/scenario_manor/: goals.md  items.yaml  rooms.yaml
dev/scenario_maze/: goals.md  items.yaml  notes.md  rooms.yaml
game/: cli.py  engine.py  entities.py  game_state.py  scenario.py  scenario_modes.py  world.py  yaml_scenario.py
templates/: items.yaml.tpl  rooms.yaml.tpl
